--- a/01/styles/style.css
+++ b/01/styles/style.css
@@ -4,9 +4,10 @@
   padding : 0px;
   font-family: 'Black Han Sans', sans-serif;
   font-family: 'Dongle', sans-serif;
+  font-family: 'Gaegu', cursive;
   font-family: 'Gowun Dodum', sans-serif;
   font-family: 'Gugi', cursive;
-  font-family: 'Yeon Sung', cursive;
+  font-family: 'Hi Melody', cursive;
   text-align: center;
 }
 
