DOM,let,const,반복문

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,11 +2,12 @@
 *{
   margin :0px;
   padding : 0px;
-  font-family: 'Black Han Sans', sans-serif;
+  ont-family: 'Black Han Sans', sans-serif;
   font-family: 'Dongle', sans-serif;
+  font-family: 'Gaegu', cursive;
   font-family: 'Gowun Dodum', sans-serif;
   font-family: 'Gugi', cursive;
-  font-family: 'Yeon Sung', cursive;
+  font-family: 'Nanum Brush Script', cursive;
   text-align: center;
 }
 
