--- a/01/styles/style.css
+++ b/01/styles/style.css
@@ -12,16 +12,21 @@ background-color: #f2dde2;
 display: flex;
 justify-content: center;
 align-items: center;
+flex-direction: column;
 
 }
 main > section {
+  margin: 1vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+
+
+
 header{
-  background-color: #ffd9e2;
+  background-color: #ffc5d3;
   color: black;
   height:10vh;
   display: flex;
@@ -31,24 +36,42 @@ header{
   position: sticky;
 
 }
-section
-{
-
+/*
+#msg {
+  display: none;
 }
-
-button{
-  background-color: #ffd9e2;
+*/
+.divMsg{
   text-align: center;
   display: inline-block;
   color: black;
-  border-radius: 5px;
-  border-color: #ffd9e25;
+  border-radius: 30px;
+  border-color: #4e5cdb85;
   display : inline-block;
   width:50vw;
   margin:1.5vh;
   max-width:100px;
   height:40px;  
-  box-shadow: 0 8px #889;
+  box-shadow:0 5px #889;
+  
+}
+section
+{
+
+}
+
+button {
+    text-align: center;
+  display: inline-block;
+  color: black;
+  border-radius: 30px;
+  border-color: #4e5cdb85;
+  display : inline-block;
+  width:50vw;
+  margin:1.5vh;
+  max-width:100px;
+  height:40px;  
+  box-shadow:0 5px #889;
 
   
 }
