--- a/01/style/style.css
+++ b/01/style/style.css
@@ -1,89 +1,108 @@
 /*레이아웃*/
-*{
-  margin :0px;
-  padding : 0px;
-  font-family: 'Gaegu', cursive;
+* {
+  margin: 0px;
+  padding: 0px;
+  font-family: "Gaegu", cursive;
   text-align: center;
 }
 
-main{
-height: 90vh;
-background-color: #f2dde2;
-display: flex;
-justify-content: center;
-align-items: center;
-flex-direction: column;
-
+main {
+  height: 90vh;
+  width: 55vh;
+  background-color: #f2dde2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 main > section {
-  margin: 1vh;
+  margin: 20vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-
-
-header{
+header {
   background-color: #ffc5d3;
   color: black;
-  height:10vh;
+  font-size: xx-large;
+  height: 10vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  top:0px;
+  top: 0px;
   position: sticky;
+}
 
-}
-/*
-#msg {
-  display: none;
-}
-*/
-.divMsg{
+.divMsg {
   text-align: center;
   display: inline-block;
   color: black;
   border-radius: 30px;
   border-color: #4e5cdb85;
-  display : inline-block;
-  width:50vw;
-  margin:1.5vh;
-  max-width:100px;
-  height:40px;  
-  box-shadow:0 5px #889;
-  
+  display: inline-block;
+  width: 50vw;
+  margin: 1.5vh;
+  max-width: 100px;
+  height: 40px;
+  box-shadow: 0 5px #889;
 }
-section
-{
-
+section {
 }
 
 button {
-    text-align: center;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
   display: inline-block;
   color: black;
-  border-radius: 30px;
+  /* border: none; */
+  border-radius: 5px;
   border-color: #4e5cdb85;
-  display : inline-block;
-  width:50vw;
-  margin:1.5vh;
-  max-width:100px;
-  height:40px;  
-  box-shadow:0 5px #889;
-
-  
+  display: inline-block;
+  width: 50vw;
+  margin: 1.5vh;
+  max-width: 100px;
+  height: 60px;
+  box-shadow: 0 5px #889;
+  font-size: xx-large;
 }
-button:hover{
-  color:rgba(69, 28, 214, 0.788);
+
+button:hover {
+  color: rgba(69, 28, 214, 0.788);
   background-color: powderblue;
-
 }
 
-div{
- 
+input[type="radio"] + label {
+  display: inline-block;
+  padding: 8px 10px;
+  border: 1px solid #dfdfdf;
+  background-color: #ffffff;
+  text-align: center;
+  cursor: pointer;
+}
+
+input[type="radio"]:checked + label {
+  background-color: #113a6b;
+  color: #ffffff;
+}
+
+div {
   display: inline-block;
 }
 
-@media only scrren and 
+fieldset {
+  width: 35vw;
+  height: 12vw;
+  padding: 5vw 2vw;
+  font-size: 4vw;
+  border: 1px solid #dfdfdf;
+}
+
+img {
+  display: block;
+  width: 20vw;
+  max-width: 100px;
+  margin-bottom: 5vh;
+}
