--- a/styles/style.css
+++ b/styles/style.css
@@ -48,7 +48,7 @@ button{
   display: inline-block;
   color: black;
   border-radius: 5px;
-  border-color: #ffd9e25;
+  border-color: #ffd9e2;
   display : inline-block;
   width:50vw;
   margin:1.5vh;
